--- a/css/estilismo.css
+++ b/css/estilismo.css
@@ -90,7 +90,7 @@ footer {
     padding-bottom: 100px;
     font-size: 17px;
     font-weight: bold;
-    text-align: left;
+    text-align: justify;
     color: #F4EBD3;
 }
 
@@ -120,7 +120,7 @@ footer {
     margin-top: 0px;
     font-size: 17px;
     font-weight: bold;
-    text-align: right;
+    text-align: justify;
     color: #F4EBD3;
 }
 
